# tdc-palestra-bot

./: .gitignore  pacientes.py  pyproject.toml  readme.md  teste.txt
knowledge_bases/: base1.json  base2.json
pages/: chat.py
